Fix: Capitalize Kun in DK trial banner

--- a/astro-site/src/i18n/dk.json
+++ b/astro-site/src/i18n/dk.json
@@ -55,7 +55,7 @@
     "description": "Vi automatiserer ikke bare journalnoter. Vi beskytter rummet mellem konsultation og journalføring. Dokumentation i høj kvalitet, struktureret og færdiggjort af dig. Hver funktion, vi tilføjer, er udviklet med dit input, bygget af Nordhealth og betroet af mere end 30.000 sundhedsprofessionelle i Norden."
   },
   "trialBanner": {
-    "text": "Lanceringstilbud: kun 399 kr per måned – tilgængeligt i begrænset tid"
+    "text": "Lanceringstilbud: Kun 399 kr per måned – tilgængeligt i begrænset tid"
   },
   "features": {
     "title": "Funktioner",
