Fix NO trial banner: 1095 kr instead of €49

--- a/astro-site/src/i18n/no.json
+++ b/astro-site/src/i18n/no.json
@@ -55,7 +55,7 @@
     "description": "Vi automatiserer ikke faglige vurderinger. Vi beskytter rommet mellom konsultasjon og journalføring. Strukturert dokumentasjon av høy kvalitet – alltid ferdigstilt og godkjent av deg. Utviklet i tett samarbeid med behandlere. Bygget av Nordhealth – brukt av over 30 000 nordiske helseprofesjonelle."
   },
   "trialBanner": {
-    "text": "Lanseringstilbud: kun €49 per måned – tilgjengelig i begrenset tid"
+    "text": "Lanseringstilbud: Kun 1095 kr per måned – tilgjengelig i begrenset tid"
   },
   "features": {
     "title": "Funksjoner",
