--- a/astro-site/src/i18n/dk.json
+++ b/astro-site/src/i18n/dk.json
@@ -209,6 +209,6 @@
         "optOut": "Du kan forhindre Google Analytics-dataindsamling ved at installere Google Analytics Opt-out-browserudvidelsen."
       }
     },
-    "contact": "Kontakt os på <a href=\"mailto:support@nordhealth.ai\">support@nordhealth.ai</a>"
+    "contact": "Spørgsmål om privatliv? Kontakt os på <a href=\"mailto:support@nordhealth.ai\">support@nordhealth.ai</a>"
   }
 }
