EN pricing: Remove 'and optional add-ons' from subtitle

--- a/astro-site/src/i18n/en.json
+++ b/astro-site/src/i18n/en.json
@@ -109,7 +109,7 @@
   },
   "pricing": {
     "title": "Choose the right plan for you",
-    "subtitle": "Choose from two different packages and optional add-ons – getting started is easy.",
+    "subtitle": "Choose from two different packages – getting started is easy.",
     "monthly": {
       "badge": "Monthly",
       "priceOld": "Previously €89 / month",
