Add extendedDescription for Psychologists & Physiotherapists (all languages)
- Split hero.description into description + extendedDescription
- extendedDescription now displays below "How Nora supports your work" header
- Matches existing structure for Speech Therapists and General Practitioners
- FI: Fixed typo "Anna Noran" → "Anna Nora" in Physiotherapists title

--- a/astro-site/src/i18n/dk.json
+++ b/astro-site/src/i18n/dk.json
@@ -221,8 +221,8 @@
       },
       "hero": {
         "title": "En reflekterende partner til moderne psykoterapi.",
-        "description": "Det vigtigste arbejde i psykoterapi sker i det uforstyrrede nærvær. Nora bliver diskret i baggrunden og støtter din dokumentation, mens det terapeutiske rum og din kliniske tænkning beskyttes.",
-        "extendedDescription": ""
+        "description": "Det vigtigste arbejde i psykoterapi sker i det uforstyrrede nærvær.",
+        "extendedDescription": "Nora bliver diskret i baggrunden og støtter din dokumentation, mens det terapeutiske rum og din kliniske tænkning beskyttes."
       },
       "features": {
         "heading": "Sådan støtter Nora dit arbejde",
@@ -272,8 +272,8 @@
       },
       "hero": {
         "title": "Dine hænder er til behandling. Lad Nora klare skrivebordsarbejdet.",
-        "description": "Fysioterapi handler om bevægelse, men dokumentation trækker dig ofte tilbage til tastaturet mellem patienterne. Nora er bygget til virkeligheden i en travl klinik og forvandler mundtlige vurderinger og stikord til struktureret og korrekt dokumentation, mens du er på farten.",
-        "extendedDescription": ""
+        "description": "Fysioterapi handler om bevægelse, men dokumentation trækker dig ofte tilbage til tastaturet mellem patienterne.",
+        "extendedDescription": "Nora er bygget til virkeligheden i en travl klinik og forvandler mundtlige vurderinger og stikord til struktureret og korrekt dokumentation, mens du er på farten."
       },
       "features": {
         "heading": "Sådan støtter Nora dit arbejde",
