--- a/astro-site/src/i18n/no.json
+++ b/astro-site/src/i18n/no.json
@@ -221,8 +221,8 @@
       },
       "hero": {
         "title": "En refleksjonspartner for moderne terapi.",
-        "description": "Det viktigste arbeidet i terapi skjer i uavbrutt tilstedeværelse. Nora jobber stille i bakgrunnen, støtter dokumentasjonen og ivaretar det terapeutiske rommet og din kliniske tenkning.",
-        "extendedDescription": ""
+        "description": "Det viktigste arbeidet i terapi skjer i uavbrutt tilstedeværelse.",
+        "extendedDescription": "Nora jobber stille i bakgrunnen, støtter dokumentasjonen og ivaretar det terapeutiske rommet og din kliniske tenkning."
       },
       "features": {
         "heading": "Slik støtter Nora arbeidet ditt",
@@ -272,8 +272,8 @@
       },
       "hero": {
         "title": "Hendene dine er til for behandling. La Nora ta seg av skrivebordsarbeidet.",
-        "description": "Fysioterapi er bevegelsesbasert, men dokumentasjon trekker deg ofte tilbake til tastaturet mellom pasienter. Nora er bygget for hverdagen i en travel klinikk, og gjør muntlige vurderinger og instruksjoner om til strukturert, journalførbar dokumentasjon mens du holder deg i bevegelse.",
-        "extendedDescription": ""
+        "description": "Fysioterapi er bevegelsesbasert, men dokumentasjon trekker deg ofte tilbake til tastaturet mellom pasienter.",
+        "extendedDescription": "Nora er bygget for hverdagen i en travel klinikk, og gjør muntlige vurderinger og instruksjoner om til strukturert, journalførbar dokumentasjon mens du holder deg i bevegelse."
       },
       "features": {
         "heading": "Slik støtter Nora arbeidet ditt",
